# siltstone-gl

./: CMakeLists.txt  README.md  main.cpp
include/sln/: collada_parser.hpp
include/sln/glw/: ElementBuffer.hpp  Shader.hpp  ShaderProgram.hpp  TextureBuffer.hpp  VertexBuffer.hpp
include/sln/type/: mesh.hpp  texture.hpp
shaders/: fragment.frag  vertex.vert
